--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ body,
 .app{
 	height: 100vh;
 	background:#eee;
-	padding: 1em;
 }
 
 /* sidepanel */
@@ -37,4 +36,24 @@ body,
 
 .message__image{
 	padding: 1em;
+}
+
+/* color icon */
+.color__container{
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+	width: 35px;
+	border-radius: 3px;
+}
+
+.color__square{
+	width: 35px;
+	height: 35px;
+}
+
+.color__overlay{
+	width: 85px;
+	height: 35px;
+	transform: rotate(225deg);
 }
